--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,24 +1,33 @@
 .home {
     display: flex;
     padding: 2rem;
-    height: 100vh;
-    background: var(--royal-blue);
+    height: 80vh;
+    background: white;
+    font-family: "Playfair Display";
   }
+.home h1{
+    font-size: 2rem;
+}
+.home p{
+font-size: 1.5rem;
+}
 .home-left{
     flex:1;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap:20px;
+    gap:15px;
+    padding: 2rem;
   }
 .home-right{
     flex:1;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
   }
-.home-right .profle img{
-    width: 300px;
+.home-right img{
+    max-width: 450px;
   }
   
 .home h1 {
