--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     padding: 1rem;
     background-color: var(--midnight-blue);
@@ -11,6 +11,14 @@
   .navbar-logo {
     font-size: 1.5rem;
     font-weight: bold;
+    display: flex;
+    gap: 15px;
+  }
+  .navbar-logo img{
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
   .navbar-links {
@@ -31,12 +39,18 @@
   @media (max-width: 768px) {
     .navbar {
       flex-direction: column;
-      align-items: flex-start;
+      align-items: center;
+      text-align: center;
+      justify-content: center;
     }
   
     .navbar-links {
       flex-direction: column;
       gap: 0.5rem;
+    }
+    .navbar-links a{
+      color:#feb236;
+      font-size: 1.2rem;
     }
   }
   
