--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -4,13 +4,18 @@
   display: flex;
   flex-direction: column;
   gap: 4rem;
-  background-color:var(--burgundy);
   padding: 15px 25px;
-  color: white;
+  /* color: white; */
   font-family: 'Playfair Display';
+  background-color:var(--burgundy);
+
 }
 
-.about h1 {
+.about.project-header h1{
+  color: black;
+  background: var(--burgundy);
+}
+ .about h1 {
   font-size: 2rem;
   color: white;
 }
@@ -24,11 +29,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 
 .about-top{
 display: flex;
+
 margin: 0 auto;
 align-items: center;
 text-align: center;
@@ -40,19 +45,23 @@ gap: 10px;
 
 .about-bottom{
     display: flex;
-    gap: 25px;
+    gap: 10px;
     padding: 10px 3rem;
-}
+    background: var(--midnight-blue);
+  }
+
 .about-links{
 font-size: 1.7rem;
+padding: 20px;
+/* background: var(--midnight-blue); */
 display: flex;
 justify-content: space-around;
 align-items: center;
-color: var(--royal-blue);
+/* color: var(--royal-blue); */
 list-style: none;
 font-weight: 500;
 padding: 10px 3rem;
-margin: 10px 2rem;
+margin: 10px 1rem;
 }
 .about-links a{
     display: flex;
@@ -65,6 +74,7 @@ margin: 10px 2rem;
         }
 
 @media (max-width: 768px) {
+  .about{display: block;}
   .about h1 {
     font-size: 1.8rem;
   }
@@ -78,13 +88,18 @@ margin: 10px 2rem;
     margin: 10px 5px;
   }
   .about-bottom{
-    padding: 0px 0px;
+    padding: 5px 12px;
     margin: 0 auto;
+  }
+  .about-bottom h1{
+    color: black;
   }
   .about-links{
     display: block;
+    padding: 15px;
+    margin: 0 auto;
+    text-align: center;
     font-size: 1rem;
-    background: var(--midnight-blue);
   }
 }
 
