--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -5,18 +5,13 @@
     background: white;
     font-family: "Playfair Display";
   }
-.home h1{
-    font-size: 2rem;
-}
-.home p{
-font-size: 1.5rem;
-}
+
 .home-left{
     flex:1;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap:15px;
+    gap:10px;
     padding: 2rem;
   }
 .home-right{
@@ -41,13 +36,27 @@ font-size: 1.5rem;
   }
   
 @media (max-width: 768px) {
+    .home{
+flex-direction: column;    
+text-align: center;}
+    .home-left{
+  /* display: block; */
+  }
     .home h1 {
       font-size: 2rem;
     }
-  
+    .home-right{
+    /* display: block; */
+  }
     .home p {
       font-size: 1rem;
     }
-  }
+    .home-right img{
+      max-width: 70%;
+margin: 0 auto;      
+height: auto;
+padding-bottom: 2em;
+    }
+}
   
   
