--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -37,8 +37,7 @@
   
 @media (max-width: 768px) {
     .home{
-flex-direction: column;    
-text-align: center;}
+display: block;}
     .home-left{
   /* display: block; */
   }
