--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -44,6 +44,7 @@
       align-items: center;
       text-align: center;
       justify-content: center;
+      padding: 10px 0px;
 
     }
     .navbar-logo {
@@ -51,14 +52,13 @@
       align-items: center;
       }
       .navbar-logo img{
-        max-width: 55%;
+        max-width: 50%;
         height: auto;
         margin: 0 auto;
       }
     .navbar-links {
       flex-direction: column;
-      margin: 0 auto;
-
+text-align: center;
       gap: 0.5rem;
     }
     .navbar-links a{
