--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -1,23 +1,40 @@
 
 .services {
-  padding: 2rem;
-  background-color: #fff;
+  padding: 2rem 2rem;
+  background-color: var(--royal-blue);
 }
 
-.services h1 {
+ h1 {
   font-size: 2rem;
-  color: #111;
+  color: white;
+  padding-left: 2rem;
+
 }
 
 .services ul {
   list-style-type: disc;
   padding-left: 2rem;
 }
+.services-summary p{
+  color: var(--darkgrey);
 
+}
 .services li {
   font-size: 1.1rem;
-  color: #333;
+  color: white;
   margin-bottom: 0.5rem;
+  font-weight: 600;
+  font-size: 1.8rem;
+  list-style: none;
+}
+.services {
+  font-size: 1.3rem;
+}
+
+.mission p{
+  font-size: 1.3rem;
+  padding-left: 2rem;
+  color: var(--darkgrey);
 }
 
 @media (max-width: 768px) {
@@ -30,7 +47,10 @@ flex-direction: column;
 justify-content: center;
 align-items: center;}
 
-  .services li {
+  .services li,p {
+    font-size: 1rem;
+  }
+  .mission p {
     font-size: 1rem;
   }
 }
