changed css for Navbar and Home

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -29,10 +29,14 @@
     font-size: 2.5rem;
     color: #333;
   }
-  
+  .home h2 {
+    color: #555;
+    padding-left: 2rem;
+  }
 .home p {
     font-size: 1.2rem;
     color: #555;
+    padding-left: 2rem;
   }
   
 @media (max-width: 768px) {
