--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -41,32 +41,42 @@
   
   @media (max-width: 768px) {
    
-    
 .navbar {
       flex-direction: column;
+      padding: 0px 0px;
       align-items: center;
-      text-align: center;
+      margin: 0 auto;
       justify-content: center;
-      padding: 10px 0px;
+      /* padding: 10px 0px; */
 
+    }
+    .navbar-logo p{
+      flex-direction: column; 
+      align-items: center;
+      justify-content: center;
+      font-size: 1.4em;
     }
     .navbar-logo {
       flex-direction: column; 
+      font-size: 1.5em;
       align-items: center;
+      justify-content: center;
       }
       .navbar-logo img{
-        max-width: 50%;
+        max-width: 40%;
         height: auto;
         margin: 0 auto;
+        border: solid var(--darkgrey)
       }
     .navbar-links {
       flex-direction: column;
-text-align: center;
-      gap: 0.5rem;
+  justify-content: center;      
+  align-items: center;
+gap: 0.5rem;
     }
     .navbar-links a{
       color:#feb236;
-      font-size: 1.2rem;
+      font-size: 1.4rem;
     }
   }
     
